--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
+        "sass": "^1.52.1",
         "unplugin-auto-import": "^0.7.2",
         "unplugin-vue-components": "^0.19.5",
         "vite": "^2.9.9"
